@@ -1,3 +1,8 @@
+Wed Feb 23 15:04:46 CET 2005 Daniel Veillard <daniel@veillard.com>
+
+	* xmlwriter.c: applied a patch from Rob Richards fixing a couple
+	  of bugs in the writer
+
 Mon Feb 21 21:51:03 HKT 2005 William Brack <wbrack@mmm.com.hk>
 
 	* xmlsave.c: fixed problem when XMLLINT_INDENT was empty (bug 168033).
